--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -19,9 +19,18 @@
     <li>1 clove garlic, chopped</li>
     <li>1 (16 ounce) package dry fettuccine pasta</li>
     <li><em>3/4</em> cup shredded parmesan cheese</li>
-    <li>1/2 cup heavy cream</li>
+    <li><em>1/2</em> cup heavy cream</li>
     <li>3 egg yolks</li>
     <li>salt and pepper to taste</li>
    </ul>
+   <h3>Directions</h3>
+   <ol>
+    <li><strong>Step 1</strong></li>
+    <p>Heat olive oil in a large heavy saucepan over medium heat. Sauté shallots until softened. Stir in bacon and onion; cook and stir until bacon is evenly browned. Stir in garlic when bacon is about half done. Remove from heat.</p>
+    <li><strong>Step 2</strong></li>
+    <p>Bring a large pot of lightly salted water to a boil. Add pasta and cook for 8 to 10 minutes or until al dente. Drain pasta, then return it to the pot.</p>
+    <li><strong>Step 3</strong></li>
+    <p>Whisk Parmesan, cream, and egg yolks together in a medium bowl. Pour bacon mixture over pasta; stir in cream mixture. Season with salt and pepper.</p>
+   </ol>
 </body>
 </html>
