added spaghetti and mashed potato link

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="../odin-recipes/recipes/carbonara.html" target="_blank">Carbonara Recipe</a>
+    <a href="../odin-recipes/recipes/spaghetti.html" target="_blank">Spaghetti Recipe</a>
+    
     
 </body>
 </html>
