finished adding links for recipes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Odin Recipes</h1>
     <a href="../odin-recipes/recipes/carbonara.html" target="_blank">Carbonara Recipe</a>
     <a href="../odin-recipes/recipes/spaghetti.html" target="_blank">Spaghetti Recipe</a>
+    <a href="../odin-recipes/recipes/mashed_potato.html" target="_blank">Mashed Potato</a>
     
     
 </body>
