--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="../odin-recipes/recipes/carbonara.html" target="_blank">Carbonara Recipe</a>
-    <a href="../odin-recipes/recipes/spaghetti.html" target="_blank">Spaghetti Recipe</a>
-    <a href="../odin-recipes/recipes/mashed_potato.html" target="_blank">Mashed Potato</a>
-    
+    <ul>
+        <li><a href="../odin-recipes/recipes/carbonara.html" target="_blank">Carbonara Recipe</a>
+        <li><a href="../odin-recipes/recipes/spaghetti.html" target="_blank">Spaghetti Recipe</a></li>
+        <li><a href="../odin-recipes/recipes/mashed_potato.html" target="_blank">Mashed Potato</a></li>
+    </ul>
     
 </body>
 </html>
