--- a/recipes/mashed_potato.html
+++ b/recipes/mashed_potato.html
@@ -20,6 +20,8 @@
     <h3>Directions</h3>
         <ol>
             <li><strong>Boil the potatoes: </strong>Add the potatoes and garlic to a large pot of salted, boiling water. Reduce the heat and simmer until the potatoes are tender.</li>
+            <li><strong>Heat the milk: </strong> Heat the milk and butter in a saucepan until the butter is melted.</li>
+            <li><strong>Mash the potatoes: </strong>Drain the potatoes, then return them to the pot. Slowly add the warm milk mixture, mashing with a potato masher or blending with a mixer until the potatoes are smooth and creamy. Season to taste.</li>
         </ol>
 
     </body>
